fixed left margin gap for .bg-modal

--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ footer {
 	height: 100%;
 	background-color: rgba(0,0,0,0.7);
 	position: absolute;
-	top: 0;
+	top:0;
+	left:0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
